--- a/worldfiles/default.yaml
+++ b/worldfiles/default.yaml
@@ -1,3 +1,5 @@
+"Initial Q-Values Mean": 0
+"Initial Q-Values Sigma": 0
 "Operations Left": 100000
 "Min Refresh Rate [ms]": 10
 "Visualize Memory": true
@@ -9,6 +11,7 @@
 "...Episode Finish": true
 "...Episode Start": true
 
+"Ice Floor": false
 "X-Torus": false
 "Y-Torus": false
 "Reward Black": -1
@@ -21,6 +24,7 @@
 "Dyna-Q n": 0
 "On-Policy": true
 "Update by Expectation": false
+"Decay \u03B5 Episode-wise": false
 
 "Exploration Rate \u03B5 (b)": 0.5
 "\u03B5-Decay Rate (b)": 0.9999
