--- a/initialWindow.yaml
+++ b/initialWindow.yaml
@@ -1,7 +1,10 @@
 skip config window: true
+show idle action warning: true
 default configfile: default #.yaml
 
 GUI Scale: 1.3
-Dim 1 Size: 2
-Dim 2 Size: 2
-King-Moves: false
+Dim 1 Size: 9
+Dim 2 Size: 9
+Default-Actions: true
+King-Actions: false
+Idle-Actions: false
