--- a/worldfiles/wind.yaml
+++ b/worldfiles/wind.yaml
@@ -51,6 +51,33 @@ world:
     text: ''
   - bg: white
     borderColor: black
+    text: S
+- - bg: white
+    borderColor: black
+    text: ''
+  - bg: white
+    borderColor: black
+    text: ''
+  - bg: white
+    borderColor: black
+    text: ''
+  - bg: white
+    borderColor: black
+    text: ''
+  - bg: white
+    borderColor: black
+    text: ''
+  - bg: white
+    borderColor: black
+    text: ''
+  - bg: white
+    borderColor: black
+    text: ''
+  - bg: white
+    borderColor: black
+    text: ''
+  - bg: white
+    borderColor: cyan
     text: ''
 - - bg: white
     borderColor: black
@@ -77,7 +104,7 @@ world:
     borderColor: black
     text: ''
   - bg: white
-    borderColor: black
+    borderColor: cyan
     text: ''
 - - bg: white
     borderColor: black
@@ -104,7 +131,7 @@ world:
     borderColor: black
     text: ''
   - bg: white
-    borderColor: black
+    borderColor: cyan
     text: ''
 - - bg: white
     borderColor: black
@@ -131,7 +158,7 @@ world:
     borderColor: black
     text: ''
   - bg: white
-    borderColor: black
+    borderColor: cyan
     text: ''
 - - bg: white
     borderColor: black
@@ -158,7 +185,7 @@ world:
     borderColor: black
     text: ''
   - bg: white
-    borderColor: black
+    borderColor: cyan
     text: ''
 - - bg: white
     borderColor: black
@@ -185,7 +212,7 @@ world:
     borderColor: black
     text: ''
   - bg: white
-    borderColor: black
+    borderColor: cyan
     text: ''
 - - bg: white
     borderColor: black
@@ -212,38 +239,11 @@ world:
     borderColor: black
     text: ''
   - bg: white
-    borderColor: black
+    borderColor: cyan
     text: ''
 - - bg: white
     borderColor: black
-    text: ''
-  - bg: white
-    borderColor: black
-    text: ''
-  - bg: white
-    borderColor: black
-    text: ''
-  - bg: white
-    borderColor: black
-    text: ''
-  - bg: white
-    borderColor: black
-    text: ''
-  - bg: white
-    borderColor: black
-    text: ''
-  - bg: white
-    borderColor: black
-    text: ''
-  - bg: white
-    borderColor: black
-    text: ''
-  - bg: white
-    borderColor: black
-    text: ''
-- - bg: white
-    borderColor: black
-    text: ''
+    text: G
   - bg: white
     borderColor: black
     text: ''
@@ -280,13 +280,13 @@ xWind:
 - 0
 yWind:
 - 0
-- 0
-- 0
-- 0
-- 0
-- 0
-- 0
-- 0
+- 1
+- 1
+- 1
+- 1
+- 1
+- 1
+- 1
 - 0
 "\u03B1 = 1/count((S,A))": false
 "\u03B5-Decay Rate (b)": 0.9999
