--- a/worlds/03_12_undiscounted_teleporters_5x5.yaml
+++ b/worlds/03_12_undiscounted_teleporters_5x5.yaml
@@ -17,8 +17,8 @@ Initial Q-Value Sigma: 0.0
 Min Delay [ms]: 10
 On-Policy: true
 Operations Left: 100000
-Reward Black: -1
-Reward Brown: 11
+Reward Grey: -1
+Reward Red: 11
 Reward Cyan: 6
 Show Every...: 1
 Visualize Memory: true
@@ -27,79 +27,79 @@ Y-Torus: false
 n-Step n: 1
 world:
 - - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
 - - bg: white
-    borderColor: Brown
+    borderColor: Red
     text: '1 '
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: 1+
 - - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
 - - bg: white
     borderColor: Cyan
     text: '2 '
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: 2+
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
 - - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
 xWind:
 - 0
