--- a/worlds/06_22_cliff_walking_12x4.yaml
+++ b/worlds/06_22_cliff_walking_12x4.yaml
@@ -17,8 +17,8 @@ Initial Q-Value Sigma: 0.0
 Min Delay [ms]: 10
 On-Policy: true
 Operations Left: 100000
-Reward Black: -1
-Reward Brown: -100
+Reward Grey: -1
+Reward Red: -100
 Reward Cyan: -10
 Show Every...: 1
 Visualize Memory: true
@@ -27,148 +27,148 @@ Y-Torus: false
 n-Step n: 1
 world:
 - - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: S
 - - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Brown
+    borderColor: Red
     text: G
 - - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Brown
+    borderColor: Red
     text: G
 - - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Brown
+    borderColor: Red
     text: G
 - - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Brown
+    borderColor: Red
     text: G
 - - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Brown
+    borderColor: Red
     text: G
 - - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Brown
+    borderColor: Red
     text: G
 - - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Brown
+    borderColor: Red
     text: G
 - - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Brown
+    borderColor: Red
     text: G
 - - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Brown
+    borderColor: Red
     text: G
 - - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Brown
+    borderColor: Red
     text: G
 - - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Black
+    borderColor: Grey
     text: G
 xWind:
 - 0
