--- a/worlds/06_19_windy_gridworld_10x7.yaml
+++ b/worlds/06_19_windy_gridworld_10x7.yaml
@@ -22,8 +22,8 @@ Reward Red: -100
 Reward Cyan: -10
 Show Every...: 1
 Visualize Memory: true
-X-Torus: false
-Y-Torus: false
+H-Torus: false
+W-Torus: false
 n-Step n: 1
 world:
 - - bg: white
@@ -236,7 +236,7 @@ world:
   - bg: white
     borderColor: Grey
     text: ''
-xWind:
+hWind:
 - 0
 - 0
 - 0
@@ -244,7 +244,7 @@ xWind:
 - 0
 - 0
 - 0
-yWind:
+wWind:
 - 0
 - 0
 - 0
