--- a/worlds/08_10_model_wrong_(2)_9x6.yaml
+++ b/worlds/08_10_model_wrong_(2)_9x6.yaml
@@ -22,8 +22,8 @@ Reward Red: -100
 Reward Cyan: -10
 Show Every...: 1
 Visualize Memory: true
-X-Torus: false
-Y-Torus: false
+H-Torus: false
+W-Torus: false
 n-Step n: 1
 world:
 - - bg: white
@@ -188,14 +188,14 @@ world:
   - bg: white
     borderColor: Grey
     text: ''
-xWind:
+hWind:
 - 0
 - 0
 - 0
 - 0
 - 0
 - 0
-yWind:
+wWind:
 - 0
 - 0
 - 0
