--- a/worlds/ice_challenge_20x20.yaml
+++ b/worlds/ice_challenge_20x20.yaml
@@ -22,8 +22,8 @@ Reward Grey: -1
 Reward Red: -100
 Show Every...: 1
 Visualize Memory: true
-X-Torus: false
-Y-Torus: false
+H-Torus: false
+W-Torus: false
 n-Step n: 1
 world:
 - - bg: white
@@ -1226,7 +1226,7 @@ world:
   - bg: white
     borderColor: Grey
     text: ''
-xWind:
+hWind:
 - 0
 - 0
 - 0
@@ -1247,7 +1247,7 @@ xWind:
 - 0
 - 0
 - 0
-yWind:
+wWind:
 - 0
 - 0
 - 0
