--- a/worlds/08_10_model_wrong_(2)_6x9.yaml
+++ b/worlds/08_10_model_wrong_(2)_6x9.yaml
@@ -3,13 +3,14 @@
 '...Episode Start': true
 '...Experience Update': true
 '...Planning Update': true
-Algorithm: Dyna-Q_50
+Algorithm: Custom
 "Decay \u03B5 Episode-wise": false
 "Discount \u03B3": 1.0
 Dyna-Q n: 50
 Expectation Update: false
 "Exploration Rate \u03B5": 0.5
 "Exploration Rate \u03B5\u200C": 0.0
+H-Torus: false
 Ice Floor: false
 Initial Q-Value Mean: 0.0
 Initial Q-Value Sigma: 0.0
@@ -17,14 +18,30 @@ Initial Q-Value Sigma: 0.0
 Min Delay [ms]: 10
 On-Policy: false
 Operations Left: 100000
+Reward Cyan: -10
 Reward Grey: -1
 Reward Red: -100
-Reward Cyan: -10
 Show Every...: 1
 Visualize Memory: true
-H-Torus: false
 W-Torus: false
+hWind:
+- 0
+- 0
+- 0
+- 0
+- 0
+- 0
+- 0
+- 0
+- 0
 n-Step n: 1
+wWind:
+- 0
+- 0
+- 0
+- 0
+- 0
+- 0
 world:
 - - bg: white
     borderColor: Grey
@@ -35,7 +52,43 @@ world:
   - bg: white
     borderColor: Grey
     text: ''
-  - bg: black
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: G
+- - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
     borderColor: Grey
     text: ''
   - bg: white
@@ -53,7 +106,70 @@ world:
   - bg: white
     borderColor: Grey
     text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+- - bg: white
+    borderColor: Grey
+    text: ''
   - bg: black
+    borderColor: Grey
+    text: ''
+  - bg: black
+    borderColor: Grey
+    text: ''
+  - bg: black
+    borderColor: Grey
+    text: ''
+  - bg: black
+    borderColor: Grey
+    text: ''
+  - bg: black
+    borderColor: Grey
+    text: ''
+  - bg: black
+    borderColor: Grey
+    text: ''
+  - bg: black
+    borderColor: Grey
+    text: ''
+  - bg: black
+    borderColor: Grey
+    text: ''
+- - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
     borderColor: Grey
     text: ''
   - bg: white
@@ -66,30 +182,6 @@ world:
     borderColor: Grey
     text: ''
   - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: black
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-- - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: black
     borderColor: Grey
     text: ''
   - bg: white
@@ -98,81 +190,6 @@ world:
   - bg: white
     borderColor: Grey
     text: S
-- - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: black
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-- - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: black
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-- - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: black
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-- - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: black
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-- - bg: white
-    borderColor: Grey
-    text: G
   - bg: white
     borderColor: Grey
     text: ''
@@ -188,23 +205,6 @@ world:
   - bg: white
     borderColor: Grey
     text: ''
-hWind:
-- 0
-- 0
-- 0
-- 0
-- 0
-- 0
-wWind:
-- 0
-- 0
-- 0
-- 0
-- 0
-- 0
-- 0
-- 0
-- 0
 "\u03B1 = 1/count((S,A))": false
 "\u03B5-Decay Rate": 0.9999
 "\u03B5-Decay Rate\u200C": 1.0
