--- a/worlds/08_10_model_wrong_(1)_6x9.yaml
+++ b/worlds/08_10_model_wrong_(1)_6x9.yaml
@@ -3,29 +3,181 @@
 '...Episode Start': true
 '...Experience Update': true
 '...Planning Update': true
-Algorithm: SARSA
+Algorithm: Custom
 "Decay \u03B5 Episode-wise": false
 "Discount \u03B3": 1.0
-Dyna-Q n: 0
+Dyna-Q n: 50
 Expectation Update: false
-"Exploration Rate \u03B5": 0.1
+"Exploration Rate \u03B5": 0.5
 "Exploration Rate \u03B5\u200C": 0.0
+H-Torus: false
 Ice Floor: false
 Initial Q-Value Mean: 0.0
 Initial Q-Value Sigma: 0.0
-"Learning Rate \u03B1": 0.5
+"Learning Rate \u03B1": 0.1
 Min Delay [ms]: 10
-On-Policy: true
+On-Policy: false
 Operations Left: 100000
+Reward Cyan: -10
 Reward Grey: -1
 Reward Red: -100
-Reward Cyan: -10
 Show Every...: 1
 Visualize Memory: true
-H-Torus: false
 W-Torus: false
+hWind:
+- 0
+- 0
+- 0
+- 0
+- 0
+- 0
+- 0
+- 0
+- 0
 n-Step n: 1
+wWind:
+- 0
+- 0
+- 0
+- 0
+- 0
+- 0
 world:
+- - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: G
+- - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+- - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+- - bg: black
+    borderColor: Grey
+    text: ''
+  - bg: black
+    borderColor: Grey
+    text: ''
+  - bg: black
+    borderColor: Grey
+    text: ''
+  - bg: black
+    borderColor: Grey
+    text: ''
+  - bg: black
+    borderColor: Grey
+    text: ''
+  - bg: black
+    borderColor: Grey
+    text: ''
+  - bg: black
+    borderColor: Grey
+    text: ''
+  - bg: black
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+- - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
+  - bg: white
+    borderColor: Grey
+    text: ''
 - - bg: white
     borderColor: Grey
     text: ''
@@ -47,214 +199,12 @@ world:
   - bg: white
     borderColor: Grey
     text: ''
-- - bg: white
-    borderColor: Grey
-    text: ''
   - bg: white
     borderColor: Grey
     text: ''
   - bg: white
     borderColor: Grey
     text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-- - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-- - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-- - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-- - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-- - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-- - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: G
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-- - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-- - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-  - bg: white
-    borderColor: Grey
-    text: ''
-hWind:
-- 0
-- 0
-- 0
-- 0
-- 0
-- 0
-- 0
-wWind:
-- 0
-- 0
-- 0
-- -1
-- -1
-- -1
-- -2
-- -2
-- -1
-- 0
 "\u03B1 = 1/count((S,A))": false
-"\u03B5-Decay Rate": 1.0
+"\u03B5-Decay Rate": 0.9999
 "\u03B5-Decay Rate\u200C": 1.0
