--- a/settings/initial.yaml
+++ b/settings/initial.yaml
@@ -5,6 +5,6 @@ default configfile: default #.yaml
 GUI Scale: 1.3
 Dim 1 Size: 7
 Dim 2 Size: 9
-Default-Actions: true
-King-Actions: false
+Straight-Actions: true
+Diagonal-Actions: false
 Idle-Actions: false
